# arxiv-trend-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.history/app/: cli_20251002152640.py  events_20251002152421.py  fetcher_20251002152532.py  fetcher_20251002153900.py  handlers_20250928181448.py  handlers_20251002152356.py  store_20250928181742.py  store_20251002152220.py
app/: __init__.py  analyzer.py  arxiv_fetcher.py  cli.py  events.py  fetcher.py  main.py  models.py  ui_streamlit.py  viz.py
tests/: test_arxiv_fetcher.py  test_fetcher.py
