[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-trend-analyzer"
version = "0.1.0"
description = "Fetch arXiv papers and visualize weekly trends"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tenma Morikawa" }]
license = { text = "MIT" }
dependencies = [
    "arxiv>=2.1.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0"
    "streamlit>=1.36.0"
]


[project.scripts]
arxivtrend = "app.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]